--- a/designers.html
+++ b/designers.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Designers</title>
 	<link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/albums.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="css/media_queries.css" rel="stylesheet" type="text/css">
