--- a/design.html
+++ b/design.html
@@ -52,6 +52,14 @@
 					<h3>Ultr. Bodoni, 1928</h3>
 				<img src="images/type2.png" alt="">
 					<h3>Franklin Gothic, 1904 by Morris Fuller Benton</h3>
+				<img src="images/type5.png" alt="">
+					<h3>Neue Aurora, 1960 by Jackson Burke</h3>
+				<img src="images/type6.png" alt="">
+					<h3>News Gothic, 1908 by Morris Fuller Benton</h3>
+				<img src="images/type7.png" alt="">
+					<h3>Raleigh Gothic, 1934 by Morris Fuller Benton</h3>
+				<img src="images/type8.png" alt="">
+					<h3>Benton, 1931 by Heinrich Jost</h3>
 			</div>
 		</div><!--.typography-->
 		
