Homepage for Mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
 
 
 	<div class="main_container">
+		<div id="homepage">
 		<img src="images/homepage.png" alt="jazz landing page">
+		</div>
+		
+		<div id="homepage_mobile">
+		<img src="images/homepage_mobile2.png" alt="jazz landing page">
+		</div>
 	
 	</div> <!-- .main-container -->
 </body>
