--- a/history.html
+++ b/history.html
@@ -44,6 +44,11 @@
 	<div class="main_container">
 		<div class="history">
 			<h2>History</h2>
+			
+		<div class="caption"
+				<img src="images/history.jpg">
+					
+			</div>
 		<div class="all_history">
 			<p><span class="dropcap">A</span>lbum covers, in the format we know them today, were an innovation in both the music and art worlds—they were a new form of packaging for a new form of media. Prior to the introduction of the 78 rpm record, records were packaged alone in plain gray or tan paper sleeves or as “albums” of sleeves bound together in a rectangular package. Album design was important for the marketing of jazz music because it typically lacked lyrics; one had to “read” the cover in order to gain some insight about the mood, tone, and style of the music.</p>
 			<p>Jazz album design became an essential aspect of jazz culture with the invention of the LP in the early 1950s. For the next twenty-plus years album covers provided a visual identity for both the music and the musician. For the most part, race was not a subject for album cover illustration; abstract designs and neutral photography lent an air of racial ambiguity for much of the 1950s and ‘60s. Very few black graphic designers were involved with album cover design—even in musical genres that have been traditionally linked to black culture and roots.</p>
