Delete last albums, add about

--- a/designers.html
+++ b/designers.html
@@ -66,7 +66,7 @@
 			<div class="designer">
 				<img src="images/Hermansader/7.jpg" alt="">		
 				<h4>John Hermansader</h4>
-				<h5>1915–2005</h5>
+				<h5>1916–2009</h5>
 				<p>In 1951, when Blue Note Records began issuing 10 inch records, Hermansader was one of their first designers, along with Paul Bacon and Gil Melle. Looking back at this era, Michael Cuscuna of Mosaic Records said, “What John Hermansader and Paul Bacon really did was evoke the feeling of the music. They used everything from Bauhaus designs to things that were really otherworldly.” Angelynn Grant adds, “When people think of Blue Note covers they think of Frank Wolff”s photography and Reid Miles design. But John Hermansader laid the groundwork that got them going along that path.” Richard Cook, who wrote Blue Note Records: The Biography states, “Hermansader in particular balanced the twin issues of photography and type in a way that would mirror the concerns of the Blue Note of the years ahead.”</p>
 			</div>
 			
@@ -74,14 +74,14 @@
 			<div class="designer">
 				<img src="images/Bacon/1.jpg" alt="">
 			<h4>Paul Bacon</h4>
-			<h5>1915–2005</h5>
+			<h5>1923–2015</h5>
 			<p>Bacon's design career got its start with drawings for small magazines such as The Newark Hot Club's Jazz Notes and Bob Thiele's Jazz before he was drafted into the Marines. After the war he worked for Hal Zamboni at his design studio, Zamboni Associates, in Manhattan, for about nine years. In addition to this $30 a week work, Bacon designed 10" album covers for Alfred Lion and Frank Wolff's label, Blue Note Records, and wrote reviews for The Record Changer, a magazine edited by Bill Grauer and Orrin Keepnews. Bacon became the chief designer for Grauer and Keepnews's label, Riverside Records, in its early and middle years. At the same time he designed covers for the pair's reissues for RCA's new label, "X". It was also during this time – the late 40's and early 50's – in which Bacon got his start in book design. Bacon designed covers for about 50 years, from his start in the early 1950s to the early 2000s. Throughout his career he used hand-drawn letters and illustrations. In later years, while Bacon was officially retired from creating book jackets, he continued to work on special projects for the small publishing firm McPherson & Co., and he returned to designing jazz albums.</p>
 			</div>
 			
 			<div class="designer">
 				<img src="images/Miles/19.jpg" alt="">
 			<h4>Reid Miles</h4>
-			<h5>1915–2005</h5>
+			<h5>1927–1993</h5>
 			<p>After working in New York City in the early 1950s for John Hermansader and Esquire magazine,[2] Miles was hired in his own right around 1955 by Francis Wolff of the jazz record label Blue Note to design album covers when the label began releasing their recordings on 12" LPs. Miles designed several hundred covers, frequently incorporating the session photographs of Francis Wolff and, later, his own photographs, although many of his later designs dispensed entirely with photographs.[2]
 Miles wasn't particularly interested in jazz, professing to have much more of an interest in classical music; he received several copies of each Blue Note album he designed but gave most of them to friends or sold them to used record shops.[2] Miles used the descriptions of the sessions relayed to him by producer Alfred Lion to create the artwork.
 Lion's retirement as a record producer in 1967 coincided with the end of Miles' connection with Blue Note. "Fifty Bucks an album...they loved it, thought it was modern, they thought it went with the music...one or two colors to work with at that time and some outrageous graphics!".</p>
@@ -90,43 +90,36 @@ Lion's retirement as a record producer in 1967 coincided with the end of Miles' 
 			<div class="designer">
 				<img src="images/Melle/1.jpg" alt="">
 			<h4>Gil Mellé</h4>
-			<h5>1915–2005</h5>
+			<h5>1931–2004</h5>
 			<p>Gil Mellé is one of few top jazz musicians who also designed great jazz album covers. He was a young bohemian in Greenvich Village in New York, playing saxophone, when he met Alfred Lion and became a member of the Blue Note family. He recorded six LPs for the label and his interest in art gave him also the opportunity to design album covers. He made several 10" covers for Blue Note before he left for Prestige in 1956. Gil Mellé was a versatile and experimental nature. He was interested in sound engineering and introduced Rudy van Gelder for both Blue Note and Prestige. He has been successful in fine art and other fields like electronic music and composing for movies and television.</p>
 			</div>
 			
 			<div class="designer">
 				<img src="images/Martin/22.jpg" alt="">
 			<h4>David Stone Martin</h4>
-			<h5>1915–2005</h5>
+			<h5>1913–1992</h5>
 			<p>David Stone Martin was born June 13, 1913, in Chicago and attended evening classes at the School of the Art Institute of Chicago. He was greatly influenced by the line art of Ben Shahn. By 1950, Martin had produced more than 100 covers for Mercury, Asch, Disc and Dial record albums. Many assignments came from his longtime friend, record producer Norman Granz. For various companies, Martin eventually created illustrations for more than 400 record albums. Many of these were simply line art combined with a single color. Martin's favorite tool was a crowquill pen which enabled him to do delicate line work. CBS-TV art director William Golden gave Martin many print ad assignments during the 1950s, and Martin soon expanded into illustration for Seventeen, The Saturday Evening Post and other slick magazines of the 1950s and 1960s.[4] His studio was located in Roosevelt, New Jersey, near his home there.</p>
 			</div>
 			
 			<div class="designer">
 				<img src="images/Claxton/1.jpg" alt="">
 			<h4>William Claxton</h4>
-			<h5>1915–2005</h5>
+			<h5>1927–2008</h5>
 			<p>William Claxton is highly regarded for his photographs of the 1950s jazz scene as he is for his album designs. In 1952 in Los Angeles he met Richard Bock who was about to launch Pacific Jazz. Claxton was recruited as a partner and the new company´s art director and photographer. Photography was Claxton´s main love, but he designed numerous album covers for the label over the six next years. He also worked for most of the other companies in the Los Angeles area, notably Contemporary Records, and for New York labels such as Riverside and Atlantic. William Claxton´s early works were dominated by black and white photography, which often were moody and melancholy. His photographs of the young Chet Baker are iconic.</p>
 			</div>
 			
 			
 			<div class="designer">
 				<img src="images/Israel/1.jpg" alt="">
-			<h4>Marvin Israel & Loring Eutemey</h4>
-			<h5>1915–2005</h5>
-			<p>Marvin Israel and his designer collegue LORING EUTEMY created the new look of Atlantic in the late 1950s and early 1960s. The abiding impression of Atlantic album covers of this period is their restrained elegance and deceptive simplicity. The covers were heavily laminated, often with high quality photographical portraits of the artists. The typyfaces were bold and colourful. The designer´s desire was to employ graphic design in a way that elevate the status of jazz and r&b artists, to give those mostly black artists a graphic package that had dignity and gravitas. At the same time the covers should be in full view in the record shops and be immediately recognizable as an hot Atlantic LP. Marvin Israel moved on from Atlantic in 1963, Loring Eutemey continued to work with the company until the mid 1970s.  </p>
-			</div>
-			
-			<div class="designer">	
-				<img src="images/Flynn/1.jpg" alt="">
-			<h4>Robert Flynn</h4>
-			<h5>1915–2005</h5>
-			<p>Marvin Israel and his designer collegue LORING EUTEMY created the new look of Atlantic in the late 1950s and early 1960s. The abiding impression of Atlantic album covers of this period is their restrained elegance and deceptive simplicity. The covers were heavily laminated, often with high quality photographical portraits of the artists. The typyfaces were bold and colourful. The designer´s desire was to employ graphic design in a way that elevate the status of jazz and r&b artists, to give those mostly black artists a graphic package that had dignity and gravitas. At the same time the covers should be in full view in the record shops and be immediately recognizable as an hot Atlantic LP. Marvin Israel moved on from Atlantic in 1963, Loring Eutemey continued to work with the company until the mid 1970s.  </p>
+			<h4>Marvin Israel</h4>
+			<h5>1924–1984</h5>
+			<p>Marvin Israel and his designer collegue Loring Eutemey created the new look of Atlantic in the late 1950s and early 1960s. The abiding impression of Atlantic album covers of this period is their restrained elegance and deceptive simplicity. The covers were heavily laminated, often with high quality photographical portraits of the artists. The typyfaces were bold and colourful. The designer´s desire was to employ graphic design in a way that elevate the status of jazz and r&b artists, to give those mostly black artists a graphic package that had dignity and gravitas. At the same time the covers should be in full view in the record shops and be immediately recognizable as an hot Atlantic LP. Marvin Israel moved on from Atlantic in 1963, Loring Eutemey continued to work with the company until the mid 1970s.  </p>
 			</div>
 				
 			<div class="designer">	
-				<img src="images/Flora/1.jpg" alt="">
+				<img src="images/Flora/3.jpg" alt="">
 			<h4>Jim Flora</h4>
-			<h5>1915–2005</h5>
+			<h5>1914–1998</h5>
 			<p>Born in Bellefontaine, Ohio, Flora attended the Art Academy of Cincinnati from 1935 to 1939. In 1938, he met writer Robert Lowry, then a student at the University of Cincinnati, and the two launched The Little Man Press, a letterpress series of limited edition publications, for which Flora supplied illustrations, design, and layout. They collaborated on Little Man Press until 1942. Beginning work in the art department under Alex Steinweiss, inventor of the illustrated album cover, Flora illustrated ads, new release bulletins, and retail and trade literature. In 1943, when Steinweiss entered the navy, Flora was promoted to Art Director. That year, he launched Columbia's monthly new release booklet, Coda, which he continued illustrating and designing through 1945, when he was promoted to advertising manager. </p>
 			</div>
 		</div><!--.dall_designers-->
