--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>History</title>
+	<title>About</title>
 	<link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
 		
 		<div class="nav_links">
 			<ul>
-				<li><a href="history.html">History</a></li>
+				<li><a href="history.html">About</a></li>
 				<li><a href="design.html">Design</a></li>
 				<li><a href="designers.html">Designers</a></li>
 				<li><a href="albums.html">Albums</a></li>
@@ -43,18 +43,17 @@
 
 	<div class="main_container">
 		<div class="history">
-			<h2>History</h2>
+			<h2>About</h2>
 			
 		<div class="caption"
 				<img src="images/history.jpg">
 					
 			</div>
 		<div class="all_history">
-			<p><span class="dropcap">A</span>lbum covers, in the format we know them today, were an innovation in both the music and art worlds—they were a new form of packaging for a new form of media. Prior to the introduction of the 78 rpm record, records were packaged alone in plain gray or tan paper sleeves or as “albums” of sleeves bound together in a rectangular package. Album design was important for the marketing of jazz music because it typically lacked lyrics; one had to “read” the cover in order to gain some insight about the mood, tone, and style of the music.</p>
-			<p>Jazz album design became an essential aspect of jazz culture with the invention of the LP in the early 1950s. For the next twenty-plus years album covers provided a visual identity for both the music and the musician. For the most part, race was not a subject for album cover illustration; abstract designs and neutral photography lent an air of racial ambiguity for much of the 1950s and ‘60s. Very few black graphic designers were involved with album cover design—even in musical genres that have been traditionally linked to black culture and roots.</p>
-			<p>The overall trend in jazz record cover aesthetics paralleled stylistic development in the fields of fine art and graphic design. Modern, abstract styles were especially well-suited to illustrate the spontaneity, call-and-response rhythms, and dynamic energy of jazz—avant garde sounds were paired with avant garde imagery. Many covers during this period explicitly reference movements like cubism, surrealism, abstract expressionism, and pop art. The work of Jackson Pollock and Roy Lichtenstein, among others, was frequently recalled in jazz album covers of the 1950s and ‘60s.</p>
-			<p>While a few key personalities emerged in the field—including Alex Steinweiss, David Stone Martin, and Reid Miles—the majority of record cover designers were doomed to obscurity. Many album covers are not attributed; fewer still are recognized as works of art in their own right. By one researcher’s estimate, over half of the album covers produced between 1948 and 1960 will never be attributed.10 The industry was not prepared for the new design opportunity presented to them by the introduction of LP jackets; the artists were often making it up as they went along, drawing from experiences in other commercial art pursuits, and rarely specializing in the field.</p>
-			<p>It is unclear how much interaction took place between the musicians and the artists who designed their album covers. Even the “masters” of jazz album design did not consistently consult with the musicians whose work they were visually representing. Although there are a few key instances of jazz musicians commissioning their own covers (Thelonius Monk, for example), and creating their own covers (like Gil Mellé), for the most part there existed a gulf between the two most creative endeavors of jazz record production.13 The management of the record label and the art director (if one existed) determined how musicians were presented to the public on the cover of their albums.</p>
+			<p><span class="dropcap">A</span>lbum covers, if designed well, have the power to give us insight into the music on an album, attract buyers, and stand as art in themselves. Because jazz typically lacks lyrics the cover is especially important in understanding the mood, tone, and style of the music. Here you will find insight into the design of jazz covers from the late 1940s to the early 1960s, as well as information on the designers themselves.</p>
+			
+			<img src="images/history.jpg">
+			<h5>Alex Steinweiss, the creator of the album cover, with some of his covers.</h5>
 			
 		</div><!--.all_history-->
 		</div><!--history-->
