--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>About</title>
+	<title>History</title>
 	<link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
 		
 		<div class="nav_links">
 			<ul>
-				<li><a href="history.html">About</a></li>
+				<li><a href="history.html">History</a></li>
 				<li><a href="design.html">Design</a></li>
 				<li><a href="designers.html">Designers</a></li>
 				<li><a href="albums.html">Albums</a></li>
@@ -43,7 +43,7 @@
 
 	<div class="main_container">
 		<div class="history">
-			<h2>About</h2>
+			<h2>History</h2>
 			
 		<div class="caption"
 				<img src="images/history.jpg">
